--- a/leiloes-api/appsettings.Development.json
+++ b/leiloes-api/appsettings.Development.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ConnectionStrings": {
+    "WebApiDatabase": "Data Source=LocalDatabase.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
