--- a/leiloes-api/WebApi.csproj
+++ b/leiloes-api/WebApi.csproj
@@ -6,5 +6,6 @@
     <PackageReference Include="AutoMapper" Version="8.0.0" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="6.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
+	<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.1.1"/>
   </ItemGroup>
 </Project>
