inclusão de swagger

--- a/leiloes-api/WebApi.csproj
+++ b/leiloes-api/WebApi.csproj
@@ -2,10 +2,14 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>.\WebApi.xml</DocumentationFile>
+  </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="8.0.0" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="6.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
-	<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.1.1"/>
+	<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.1.1" />
+	<PackageReference Include="Swashbuckle.AspNetCore" Version="5.0.0" />
   </ItemGroup>
 </Project>
